# digital-insurance

./: .gitignore  README.md  flake.nix  merge.nix  shell.nix
.github/workflows/: test.yml
di-book/: .gitignore  book.toml  default.nix  flake.nix  package.nix  readme.md  shell.nix  taplo.toml
di-book/.github/workflows/: deploy.yml
di-book/src/: SUMMARY.md
di-cnfm/: Cargo.toml  default.nix  package.nix
di-conformance/: Cargo.toml  default.nix  package.nix  shell.nix
di-core/: Cargo.toml  default.nix  package.nix  readme.md  shell.nix
di-core/crates/backend/: Cargo.toml
di-core/crates/backend/src/: jwt.rs  lib.rs  response.rs
di-core/crates/backend/src/routes/: mod.rs  users.rs
di-core/crates/command/: Cargo.toml
di-core/crates/command/src/: lib.rs  main.rs
di-core/crates/database/: Cargo.toml
di-core/crates/database/migrations/2025-02-07-032609_create_users/: up.sql
di-core/crates/database/src/: lib.rs  schema.rs  users.rs
di-core/crates/utilities/: Cargo.toml
di-core/crates/utilities/src/: config.rs  error.rs
di-core/scripts/: init-db.sh  init-service.sh
di-front/: .gitignore  Cargo.toml  Trunk.toml  default.nix  index.html  justfile  package.nix  shell.nix
di-front/src/: app.rs  router.rs
di-front/src/components/: alert.rs  form_input.rs  header.rs  loading_button.rs  spinner.rs
di-front/src/pages/: home_page.rs  login_page.rs  profile_page.rs  register_page.rs
di-stimerch/: .gitignore  Cargo.toml  default.nix  docker-compose.yml  package.nix  shell.nix
