[package]
name = "di-cnfm"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://egov.uz"
repository = "https://github.com/egov-uz/digital-insurance"
description = "Conformance utility for checking DI suite"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Dependencies that will included with final binary
[dependencies]

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
