[workspace]
resolver = "2"
default-members = ["crates/command"]
members = ["crates/command", "crates/database", "crates/backend", "crates/utilities"]

[workspace.package]
name = "di-core"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core service for storing data standardized way"
homepage = "https://egov.uz"
repository = "https://github.com/egov-uz/digital-insurance"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Shared dependencies across crates
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
dotenvy = "0.15.7"
toml = { version = "0.8.20", features = ["display"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "r2d2", "chrono"] }
r2d2 = "0.8.10"
uuid = { version = "1.13", features = ["v4", "v7", "serde"] }
argon2 = "0.5.3"
chrono = { version = "0.4.43", features = ["serde"] }
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}

# Optimize release binary as much as possible
[profile.release]
codegen-units = 1
incremental = true
lto = true
strip = true
opt-level = "z"
