[package]
name = "backend"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Relative Dependencies
utilities = { path = "../utilities" }
database = { path = "../database" }

# Third Party Dependencies
# # Workspace
actix-web = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }

# # Induvidual
env_logger = "0.11"
serde_json = "1"
