[package]
name = "command"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Relative Dependencies
backend = { path = "../backend" }
utilities = { path = "../utilities" }

# Third party dependencies
# # Workspsace
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }

# # Induvidual
clap = { version = "4.5.28", features = ["derive"] }
