[package]
name = "database"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Relative Dependencies
utilities = { path = "../utilities" }

# Third Party Dependencies
# # Workspsace
serde = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }

# # Induvidual
dotenvy = "0.15"
rand_core = {version = "0.9.5", features = ["std"]}
