[package]
name = "utilities"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# # Workspsace
dotenvy = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
r2d2 = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

# # Induvidual
get_fields = "0.1.0"
syn = { version = "2.0", features = ["derive", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2"
